--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       --muted:#6b7280;
       --card:#fff;
       --shadow: 0 8px 24px rgba(15,23,42,0.06);
+	  --crimson:#CC0C1A;
       font-family: 'Nunito', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
     }
     *{box-sizing:border-box}
@@ -21,16 +22,88 @@
     .container{max-width:1100px;margin:0 auto;padding:20px;}
 
     /* Header */
-    header{
-      background:var(--card);
-      box-shadow:var(--shadow);
-      border-radius:10px;
-      margin-bottom:20px;
-      padding-top:max(5px, env(safe-area-inset-top));
-      padding-bottom:5px;
-      position: sticky; top: 12px; z-index: 1100;
-    }
-    .header-inner{display:flex;align-items:center;justify-content:space-between;padding:2px 25px}
+    /* Header */
+.site-header {
+  background: var(--card);
+  box-shadow: var(--shadow);
+  border-radius: 12px;
+  margin-bottom: 20px;
+  padding: 14px 20px 16px;
+  position: sticky;
+  top: 12px;
+  z-index: 1100;
+}
+
+.header-inner.centered {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 14px;
+  text-align: center;
+}
+
+.brand-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4px;
+}
+
+.brand-logo {
+  height: 120px;
+  width: auto;
+  display: block;
+}
+
+.brand-title {
+  color: var(--crimson);
+  font-weight: 800;
+  font-size: 1.3rem;
+}
+
+.brand-tagline {
+  color: var(--muted);
+  font-size: 0.9rem;
+  letter-spacing: 0.04em;
+}
+
+/* Nav */
+.main-nav ul {
+  display: flex;
+  gap: 14px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.main-nav a {
+  color: #111;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 0.9rem;
+  padding: 4px 8px;
+  border-radius: 999px;
+}
+
+.main-nav a:hover {
+  background: rgba(217, 70, 74, 0.1);
+}
+
+/* mobile tweaks */
+@media (max-width: 640px) {
+  .brand-logo {
+    height: 90px;
+  }
+  .main-nav ul {
+    gap: 10px;
+  }
+  .main-nav a {
+    font-size: 0.85rem;
+  }
+}
+
     .logo{display:flex;align-items:center;gap:10px}
     .logo img {height: 125px; width: auto;}
     nav ul{display:flex;gap:16px;list-style:none;margin:0;padding:0}
@@ -54,7 +127,7 @@
 
 
 	header {
-	  background: rgba(255,255,255,0.95);
+	  background: rgba(255,255,255);
 	  backdrop-filter: blur(8px);
 	}
 
@@ -77,9 +150,9 @@
 	  align-items:center;
 	  gap:6px;
 	}
-	#menu h2::after {
+	<!--#menu h2::after {
 	  content:'🍜';
-	}
+	} -->
 
 
     /* Menu categories (accordion) */
@@ -129,11 +202,11 @@
     .spice-btn.active{border-color:var(--accent);background:#fff4f3}
 
     /* Allergens */
-    .allergen-icon{font-size:18px;margin-right:6px}
+    .allergen-icon{font-size:14px;margin-right:6px}
     .allergen-badges{display:flex;flex-wrap:wrap;gap:8px;margin-top:6px}
     .allergen-badge{display:inline-flex;align-items:center;gap:6px;padding:6px 10px;border:1px solid #eee;border-radius:999px;background:#fff;font-size:12px}
 
-    footer{margin-top:18px;text-align:center;padding:18px;border-radius:10px;background:#111;color:white; padding-bottom:max(18px, env(safe-area-inset-bottom));}
+    footer{margin-top:18px;text-align:center;padding:18px;border-radius:10px;background:rgba(204,12,26,0.35);color:white; padding-bottom:max(18px, env(safe-area-inset-bottom));}
 
     /* Checkout form layout/styling */
     #checkout-form > div { margin-top: 10px; }
@@ -225,6 +298,53 @@
     gap: 8px;
   }
 }
+/* === Parallax background layer === */
+.bg-parallax {
+  position: fixed;
+  inset: 0;
+  z-index: -1;
+  pointer-events: none;
+  overflow: hidden;
+  background:
+    /* top image */
+    url("images/bg-top6.jpg") center top / cover no-repeat,
+    /* bottom image */
+    url("images/bg-bottom.jpg") center 120vh / cover no-repeat,
+    /* fallback colour under both */
+    #0b1120;
+  background-attachment: fixed, fixed, scroll;
+  /* dim it a bit so text stays readable */
+  filter: brightness(.55);
+}
+
+/* extra spacing between sections so we *see* the background */
+.card {
+  margin-bottom: 26px;   /* was 14–18px in places */
+}
+
+/* give main a bit more vertical rhythm */
+main > section > .card + .card {
+  margin-top: 26px;
+}
+
+/* keep footer off the bottom a little so background shows */
+footer {
+  margin-top: 30px;
+}
+
+/* mobile fallback: iOS hates background-attachment:fixed */
+@media (max-width: 768px) {
+  .bg-parallax {
+    background-attachment: scroll, scroll, scroll;
+    background-size: cover, cover, auto;
+  }
+}
+.card {
+  background: rgba(255,255,255,0.9);
+  backdrop-filter: blur(2px);
+}
+
+
 
 <script>
 console.info('Console levels forced');
@@ -235,26 +355,34 @@ console.log = console.info = console.debug = console.warn = console.error = cons
   </style>
 </head>
 <body>
+<body>
+  <div class="bg-parallax" aria-hidden="true"></div>
+  <div class="container">
+    <!-- your existing header / main / etc -->
+
   <div class="container">
     <!-- Header -->
-    <header>
-      <div class="header-inner">
-        <div class="logo">
-          <div class="logo"><img src="images/RTKWhite1.png" alt="Rung's Thai Kitchen Logo" /></div>
-          <div><div style="font-weight:800;font-size:20px">Authentic Thai Takeaway</div></div>
-        </div>
-        <nav>
-          <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#our-food">Our Food</a></li>
-            <li><a href="#allergens">Allergens</a></li>
-            <li><a href="#menu">Menu</a></li>
-            <li><a href="#order">Order</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+    <header class="site-header">
+  <div class="header-inner centered">
+    <div class="brand-block">
+      <img src="images/RTKWhite1.png" alt="Rung's Thai Kitchen Logo" class="brand-logo">
+      <!--<div class="brand-title">Rung's Thai Kitchen</div>-->
+      <div class="brand-title">Authentic Thai Takeaway</div>
+    </div>
+
+    <nav class="main-nav">
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#our-food">Our Food</a></li>
+        <li><a href="#allergens">Allergens</a></li>
+        <li><a href="#menu">Menu</a></li>
+        <!--<li><a href="#order">Order</a></li>-->
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+
 
     <main>
       <!-- Left column -->
@@ -263,7 +391,9 @@ console.log = console.info = console.debug = console.warn = console.error = cons
         <div class="card" id="about">
           <h1>About Rung's Thai Kitchen</h1>
           <p class="muted" style="margin-top:8px">
-            Welcome to Rung's Thai Kitchen, where I take pride in delivering authentic Thai takeaway food right to your doorstep in Leeds. My culinary journey began with a passion for traditional Thai recipes handed down through generations. I believe that the secret to great Thai cuisine lies in using fresh, high-quality ingredients and a careful balance of flavours. Each dish is crafted with love and dedication, ensuring that you experience the vibrant and aromatic taste of Thailand in every bite. Whether you're craving a comforting curry or a refreshing salad, I've got you covered.
+            Welcome to Rung's Thai Kitchen, where I take pride in delivering authentic Thai takeaway food right to your doorstep in Leeds.</p>
+			<p class="muted"> My culinary journey began with a passion for traditional Thai recipes handed down through generations. I believe that the secret to great Thai cuisine lies in using fresh, high-quality ingredients and a careful balance of flavours. Each dish is crafted with love and dedication, ensuring that you experience the vibrant and aromatic taste of Thailand in every bite.</p>
+			<p class="muted">Whether you're craving a comforting curry or a refreshing salad, I've got you covered.
           </p>
         </div>
 
