--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
     .btn-ghost{background:transparent;border:1px solid #eee}
     .btn[disabled]{opacity:.55;cursor:not-allowed;filter:grayscale(10%)}
 	
-	body {
-  background: #16205B;
+	<!--body {
+	background: #16205B;-->
 
 
 	header {
@@ -307,7 +307,7 @@
   overflow: hidden;
   background:
     /* top image */
-    url("images/bg-top6.jpg") center top / cover no-repeat,
+    url("images/bg-top5.jpg") center top / cover no-repeat,
     /* bottom image */
     url("images/bg-bottom.jpg") center 120vh / cover no-repeat,
     /* fallback colour under both */
@@ -319,12 +319,12 @@
 
 /* extra spacing between sections so we *see* the background */
 .card {
-  margin-bottom: 26px;   /* was 14–18px in places */
+  margin-bottom: 250px;   /* was 14–18px in places */
 }
 
 /* give main a bit more vertical rhythm */
 main > section > .card + .card {
-  margin-top: 26px;
+  margin-top: 250px;
 }
 
 /* keep footer off the bottom a little so background shows */
