--- a/index.html
+++ b/index.html
@@ -307,9 +307,9 @@
   overflow: hidden;
   background:
     /* top image */
-    url("./images/bg-top5.jpg") center top / cover no-repeat,
+    url("images/bg-top6.JPG") center top / cover no-repeat,
     /* bottom image */
-    url("./images/bg-bottom.jpg") center 120vh / cover no-repeat,
+    url("images/bg-bottom.jpg") center 120vh / cover no-repeat,
     /* fallback colour under both */
     #0b1120;
   background-attachment: fixed, fixed, scroll;
