--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
   overflow: hidden;
   background:
     /* top image */
-    url("images/bg-top6.JPG") center top / cover no-repeat,
+    url("./images/bg-top6.JPG?v=2") center top / cover no-repeat,
     /* bottom image */
     url("images/bg-bottom.jpg") center 120vh / cover no-repeat,
     /* fallback colour under both */
