--- a/index.html
+++ b/index.html
@@ -344,6 +344,10 @@ footer {
   backdrop-filter: blur(2px);
 }
 
+/* This helps anchors or programmatic scrolls land below the sticky header */
+.category { scroll-margin-top: 72px; } /* adjust if your header is taller on mobile */
+
+
 
 
 <script>
@@ -778,6 +782,29 @@ console.log = console.info = console.debug = console.warn = console.error = cons
     function formatCurrency(n){ const cents = Math.round((n + Number.EPSILON) * 100); return '£' + (cents/100).toFixed(2); }
     function roundToTwo(n){ return Math.round((n + Number.EPSILON) * 100) / 100; }
     function chilliIcons(n){ return '🌶️'.repeat(Math.max(0, Math.min(3, n||0))); }
+	
+	// Put these helpers near your other utilities
+	function getHeaderHeight() {
+	  const h = document.querySelector('header');
+	  return h ? h.getBoundingClientRect().height : 0;
+	}
+	function scrollCategoryIntoView(categoryBodyEl) {
+	  // scroll so the TOP of the category body sits just below the sticky header
+	  const headerH = getHeaderHeight();
+	  const y = categoryBodyEl.getBoundingClientRect().top + window.scrollY - headerH - 8; // 8px breathing room
+	  window.scrollTo({ top: y, behavior: 'smooth' });
+	  function setScrollMarginFromHeader() {
+  const h = getHeaderHeight();
+  document.querySelectorAll('.category').forEach(c => {
+    c.style.scrollMarginTop = (h + 8) + 'px';
+	  });
+	}
+	window.addEventListener('resize', setScrollMarginFromHeader);
+	window.addEventListener('load', setScrollMarginFromHeader);
+	setScrollMarginFromHeader();
+
+	}
+
 
     // ---------- Build menu (accordion categories) ----------
     function buildMenu(){
@@ -823,21 +850,38 @@ console.log = console.info = console.debug = console.warn = console.error = cons
         });
 
         // Accordion behavior
-        header.addEventListener('click', ()=> {
-          const wasOpen = body.classList.contains('open');
-          document.querySelectorAll('.category-body').forEach(b => {
-            b.classList.remove('open');
-            b.style.maxHeight = '0px';
-            const hdr = b.previousElementSibling;
-            if (hdr) { const caret = hdr.querySelector('.caret'); if (caret) caret.textContent = '▶'; }
-          });
-          if (!wasOpen) {
-            body.classList.add('open');
-            body.style.maxHeight = body.scrollHeight + 'px';
-            const caret = header.querySelector('.caret');
-            if (caret) caret.textContent = '▼';
-          }
-        });
+        header.addEventListener('click', () => {
+		  // 1) Close all other categories
+		  document.querySelectorAll('.category-body').forEach(b => {
+			if (b !== body) {
+			  b.classList.remove('open');
+			  b.style.maxHeight = '0px';
+			  const caret = b.previousElementSibling?.querySelector('.caret');
+			  if (caret) caret.textContent = '▶';
+			}
+		  });
+
+		  // 2) Toggle this one
+		  const wasOpen = body.classList.contains('open');
+		  if (!wasOpen) {
+			body.classList.add('open');
+			body.style.maxHeight = body.scrollHeight + 'px';
+			const caret = header.querySelector('.caret');
+			if (caret) caret.textContent = '▼';
+
+			// 3) After the expand paints, scroll it under the sticky header
+			requestAnimationFrame(() => {
+			  // if content inside loads images and grows, wait a tick more
+			  setTimeout(() => scrollCategoryIntoView(body), 50);
+			});
+		  } else {
+			body.classList.remove('open');
+			body.style.maxHeight = '0px';
+			const caret = header.querySelector('.caret');
+			if (caret) caret.textContent = '▶';
+		  }
+		});
+
 
         catEl.appendChild(header);
         catEl.appendChild(body);
